--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@
     height: 30rem;
     width: 55rem;
     margin: 2rem 0;
+    object-fit: contain;
 }
 
 /* Section One CSS Ends */
@@ -97,7 +98,8 @@
 .hr_tag{
     width: 95%;
     margin: auto;
-    color: #ff0000;
+    background-color: #ff0000;
+    height: .1rem;
 }
 
 /* Section Three CSS Starts */
@@ -184,6 +186,7 @@ footer .one, footer .two, footer .three{
         height: 30rem;
         width: 30rem;
         margin: 2rem 0;
+        object-fit: contain;
     }
 
     .section_two .sec_two_con img{
