--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@
 footer{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     background-color: #ff0000;
     height: 5rem;
     margin: 0 1rem;
